second correction run

--- a/contents/05_FutureWork.tex
+++ b/contents/05_FutureWork.tex
@@ -1,9 +1,9 @@
 Future Work on the thesis's matter is tightly tied to progress on the module block proposal. At current state the proposal resides at stage two where neither the specification is finalized nor the details are all cleared. A specific case of this is the hostInitializeModuleBlock-method mentioned in the runtime semantics of the module block specification, as it is merely mentioned but not specified. The work needs to be continued to keep the implementation on par with the specification. Especially as soon as the proposal reaches stage three the final specification is available. Subsequently the implementation has to be adjusted to fit the final version. Furthermore as the proposal progresses official tests will be released and later on embedded into the official Test262 suite. Those tests then have to be applied to the finished implementation. The preceding development description is rather rough, therefore the following paragraphs discuss details on the proposal that are not fixed yet.
 
-A controversial implementation detail up for possible change is the constructor of module blocks. At current development state a constructor call leads to a TypeError. The relevant point for rejecting the ability to create a module block via a constructor is that module blocks would turn into an eval-like structure which is unwanted for as the web community generally rejects the eval-method. Due to security issues this sentiment gained widespread support. On the other hand one can argue that a language's design should be sound and symmetrical. Other structures that were introduced in ECMAScript that share the eval-like constructor discussion do have a working constructor. Thus for reasons of symmetry module blocks should have a constructor as well. The result of the discussion will be visible latest at stage three of the proposal. Right now the simple constructor implementation only throws the error and would have to be fully implemented if a working constructor is introduced in the proposal.
+A controversial implementation detail up for possible change is the constructor of module blocks. At current development state a constructor call leads to a \texttt{TypeError}. The relevant point for rejecting the ability to create a module block via a constructor is that module blocks would turn into an eval-like structure which is unwanted for as the web community generally rejects the eval-method. Due to security issues this sentiment gained widespread support. On the other hand one can argue that a language's design should be sound and symmetrical. Other structures that were introduced in ECMAScript that share the eval-like constructor discussion do have a working constructor. Thus for reasons of symmetry module blocks should have a constructor as well. The result of the discussion will be visible latest at stage three of the proposal. Right now the simple constructor implementation only throws the error and would have to be fully implemented if a working constructor is introduced in the proposal.
 
-Another feature that might be introduced is an abbreviated form of module blocks. Due to the feature's rather syntactic nature the requirement are parser changes leading then into the same semantics as module blocks. The feature might be included if import-free-single-function module blocks become a frequently recurring pattern. Also not entirely clear is what the import.meta.url of a module block should look like. Although it is save to assume that it's bound to the module's import.meta.url in which it is specified it is frowned upon to be the exact same. A possible setup would be the module's import.meta.url directly followed by something like: "$L\#^+C\#^+$" where the \#s stand for the exact line and column number of the module block. As this is also not fixed yet the implementation has to follow suit as soon as the import.meta.url semantics are fixed.
+Another feature that might be introduced is an abbreviated form of module blocks. Due to the feature's rather syntactic nature the requirement are parser changes leading then into the same semantics as module blocks. The feature might be included if import-free-single-function module blocks become a frequently recurring pattern. Also not entirely clear is what the import.meta.url of a module block should look like. Although it is save to assume that it's bound to the module's \texttt{import.meta.url} in which it is specified it is frowned upon to be the exact same. A possible setup would be the module's import.meta.url directly followed by something like: "$L\#^+C\#^+$" where the \#s stand for the exact line and column number of the module block. As this is also not fixed yet the implementation has to follow suit as soon as the import.meta.url semantics are fixed.
 
-In short, the implementation cannot be finalized in the scope of the thesis as the proposal won't be finished by far. A lot of details need to be worked on before the proposal can reach stage three. With stage three reached the implementation can be finished as the specification will be finished more or less. The testing in the scope of the thesis has to be adapted to the final implementation and the tests being released before the proposal can reach stage four. Since the implementation is tied closely to the proposal it can only be done as soon as the proposal is completed and adopted by moving to stage 4 which is possible earliest in 2022.
+In short, the implementation cannot be finalized in the scope of the thesis as the proposal hasn't reached stage 4 by then. A lot of details need to be worked on before the proposal can reach stage three. With stage three reached the implementation can be finished as the specification will be finished more or less. The testing in the scope of the thesis has to be adapted to the final implementation and the tests being released before the proposal can reach stage four. Since the implementation is tied closely to the proposal it can only be done as soon as the proposal is completed and adopted by moving to stage 4 which is possible earliest in 2022.
 
 As much as the implementation is bound to the proposal, the testing is bound to the implementation and thus cannot be finalized until the proposal is adopted. The aforementioned features all have to be tested separately. It should also be noted that the performance tests conducted in the scope of the thesis test for module block call's performance loss exclusively, but the performance should also be measured in real-world examples to test general runtime metrics. However, these particular tests should be conducted in a later state of the proposal as a lot of the semantics are not fixed yet. In conclusion, testing should be continued and intensified alongside the implementation and proposal development.
