--- a/literature.bib
+++ b/literature.bib
@@ -244,3 +244,14 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
     keywords = {Computer architecture ; Computerarchitektur},
     url = {http://media.obvsg.at/AC05695781-1001},
 }
+
+@online{facebook,
+author = {Alina Yurenko},
+title = {GraalVM at Facebook},
+url = {https://medium.com/graalvm/graalvm-at-facebook-af09338ac519},
+urldate = {2021-08-01}}
+
+@online{nodejs,
+title = {Node.js v16.6.0 documentation},
+url = {https://nodejs.org/api/worker_threads.html},
+urldate = {2021-08-01}}
