List of Listings correction

--- a/MAIN.tex
+++ b/MAIN.tex
@@ -173,6 +173,9 @@
 		captionpos=b
 	}
 
+\renewcommand\lstlistingname{List of Listings}
+\renewcommand\lstlistlistingname{List of Listings}
+
 %\usepackage{tikz}
 %\usetikzlibrary{positioning}
 %\usetikzlibrary{graphdrawing.trees}
